--- a/_frontend/assets/css/main.css
+++ b/_frontend/assets/css/main.css
@@ -1,3 +1,5 @@
+@import
+
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +8,7 @@
 body {
     background-color: #fff;
     color: #000;
-    font-family: 'Raleway', sans-serif;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: 200;
     height: 100vh;
     margin: 0;
@@ -20,12 +22,13 @@ body {
     background: black;
     padding: 0px;
     position: fixed;
-    z-index: 999;
+    z-index: 998;
 }
 
 .sub-nav {
     background: #dfdfdf;
     padding: 20px 0px;
+    z-index: 999;
 }
 
 h1 {
