--- a/_frontend/assets/css/main.css
+++ b/_frontend/assets/css/main.css
@@ -14,8 +14,8 @@ body {
     margin: 0;
 }
 
-.main-menu {
-    padding: 5px;
+.menu {
+    padding: 0px;
 }
 
 .nav {
@@ -27,13 +27,14 @@ body {
 
 .sub-nav {
     background: #dfdfdf;
-    padding: 20px 0px;
-    z-index: 999;
+    padding-top: 5px;
+    padding-left: 40px;
+    height: 30px;
 }
 
 h1 {
     color: #fff;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     text-transform: uppercase;
     float: left;
@@ -51,6 +52,20 @@ h2 {
 .product-title {
     margin-top: 10px;
     height: 40px;
+}
+
+.price {
+    margin-top: 10px;
+    margin-bottom: 40px;
+    height: 20px;
+}
+
+p.price-striketrough {
+    color: gray;
+    text-decoration: line-through;
+}
+p.discount-price {
+    color: red;
 }
 
 span {
@@ -72,9 +87,13 @@ span {
     padding: 30px 20px;
 }
 
-.view-zalora {
-    border: 1px solid #fff;
-    padding: 4px 14px;
+.zalora-link {
+    background-color: #333;
+}
+
+.zalora-button {
+    border: 0px solid #fff;
+    padding: 0px 20px;
     background-color: #333;
     color: #fff;
     text-transform: uppercase;
@@ -83,3 +102,6 @@ span {
     cursor: pointer;
 }
 
+.body {
+    padding-top: 100px;
+}
