--- a/_frontend/assets/css/main.css
+++ b/_frontend/assets/css/main.css
@@ -47,6 +47,14 @@ body {
     list-style: none;
 }
 
+.banner {
+    width: 100%;
+}
+
+.banner:hover {
+    opacity:0.8;
+}
+
 ul {
     padding-left: 0px;
 }
