--- a/_frontend/assets/css/main.css
+++ b/_frontend/assets/css/main.css
@@ -37,6 +37,25 @@ body {
     height: 47px;
 }
 
+.sub-nav-links {
+    color: #333;
+    text-decoration: none;
+}
+
+.sub-nav-links:hover {
+    border-bottom: 4px solid #333;
+    color: #333;
+    padding-bottom: 10px;
+    text-decoration: none;
+}
+
+.sub-nav-links.active {
+    border-bottom: 4px solid #333;
+    color: #333;
+    padding-bottom: 10px;
+    text-decoration: none;
+}
+
 .sub-title {
     padding: 2px 30px 0px 0px;
     text-decoration: none;
@@ -45,6 +64,31 @@ body {
     text-transform: uppercase;
     color: #333;
     list-style: none;
+}
+
+.all-product.footer {
+    float: right;
+    text-align: right;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.footer-info > li{
+    padding-right: 10px;
+    padding-left: 10px;
+    list-style: none;
+    display: inline-block;
+    border-right: 1px solid #333;
+}
+
+li.last {
+    padding-right: 0px;
+    border-right: none;
+}
+
+#footer {
+    margin-top: 20px;
+    margin-bottom: 5px;
 }
 
 .banner {
@@ -89,7 +133,7 @@ h2 {
 }
 
 .price {
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 40px;
     height: 20px;
 }
