add laravel scout with algolia and mysql driver

--- a/_frontend/assets/css/main.css
+++ b/_frontend/assets/css/main.css
@@ -66,6 +66,16 @@ body {
     list-style: none;
 }
 
+/* Search */
+.btn-black {
+    background: #333;
+}
+
+.white {
+    color: #fff;
+}
+
+/* Product */
 .all-product.footer {
     float: right;
     text-align: right;
